# smart-cockpit

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  smart_cockpit.code-workspace
docs/: ARM交叉编译与部署.md  AUTOSAR入门指南.md  CAN总线企业级改造总结.md  DBC工具链实战.md  (+9 more)
vehicle-terminal/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
vehicle-terminal/.claude/: CLAUDE.md
vehicle-terminal/.claude/plans/: voice-module-plan.md
vehicle-terminal/src/: main.cpp
vehicle-terminal/src/config/: config.h  configmanager.cpp  configmanager.h
vehicle-terminal/src/core/: backlightcontrol.cpp  backlightcontrol.h  canmanager.cpp  canmanager.h  comlayer.cpp  comlayer.h  ec20manager.cpp  ec20manager.h  mapmanager.cpp  mapmanager.h  rte.cpp  rte.h  sysfsled.cpp  sysfsled.h  v4l2camera.cpp  v4l2camera.h  vehicledataprocessor.cpp  vehicledataprocessor.h  volumemanager.cpp  volumemanager.h  weathermanager.cpp  weathermanager.h  wifimanager.cpp  wifimanager.h
vehicle-terminal/src/core/com_stack/: cantp.cpp  cantp.h  com.cpp  com.h  dcm.cpp  dcm.h  dem.cpp  dem.h  nvm.cpp  nvm.h  pdur.cpp  pdur.h
vehicle-terminal/src/resources/: resources.qrc
vehicle-terminal/src/resources/media/music/: Lemon Tree - Fool's Garden.lrc  只因你太美 - SWIN-S.lrc
vehicle-terminal/src/resources/styles/: mainwindow.qss  style.qss
vehicle-terminal/src/ui/forms/: canAssistantPage.ui  gpioTestPage.ui  homePage.ui  mainwindow.ui  musicPage.ui  navigationPage.ui  serialAssistantPage.ui  settingsPage.ui  toolsPage.ui  udsDiagnosticPage.ui
vehicle-terminal/src/ui/pages/: canAssistantPage.cpp  canAssistantPage.h  gpioTestPage.cpp  gpioTestPage.h  homePage.cpp  homePage.h  mainwindow.cpp  mainwindow.h  musicPage.cpp  musicPage.h  navigationPage.cpp  navigationPage.h  rearViewCamera.cpp  rearViewCamera.h  serialAssistantPage.cpp  serialAssistantPage.h  settingsPage.cpp  settingsPage.h  toolsPage.cpp  toolsPage.h  udsDiagnosticPage.cpp  udsDiagnosticPage.h
vehicle-terminal/src/ui/widgets/: MySlider.cpp  MySlider.h  SwitchButton.cpp  SwitchButton.h
vehicle-terminal/src/utils/: iconhelper.h
vehicle-terminal/tests/: mock_route.nmea  test_ec20manager.cpp
vehicle-terminal/tools/: deploy.sh  deployRes.sh  toolchain.cmake
(+96 files in other folders)
